day7 Hot-deal -> product group으로 변경 + "쇼핑 급상승 키워드" 구현

--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -94,6 +94,10 @@ $SearchHeight: 60px;
 
     }
 
+    .category__lists-wrapper{
+        display: none;
+    }
+
     .top-menu {
         display: flex;
         align-items: center;
@@ -229,5 +233,14 @@ $SearchHeight: 60px;
                 color: red;
             }
         }
+    }
+}
+
+.item:hover{
+    .item-img{
+        opacity: 0.7;
+    }
+    .item-title{
+        text-decoration: underline;
     }
 }
