style : Add cursur pointer

--- a/client/src/components/common/item/index.scss
+++ b/client/src/components/common/item/index.scss
@@ -5,7 +5,7 @@
   padding: 30px;
   border-right: 1px solid #f1f1f1;
   border-bottom: 1px solid #f1f1f1;
-
+  cursor: pointer;
   .item-img {
     margin-top: 10px;
     width: 100%;
