feat. HeaderSearchBar 컴포넌트 분리

--- a/client/styles/index.scss
+++ b/client/styles/index.scss
@@ -1,6 +1,7 @@
 @import 'reset';
 @import 'common';
 @import 'header';
+@import 'headerSearchBar';
 @import 'container';
 @import 'footer';
 @import 'slider';
