feat: Planning 캐러셀 -> 버튼 클릭 이벤트 빠르게 클릭되어 에러발생되는 현상 방지

--- a/src/public/sass/app.scss
+++ b/src/public/sass/app.scss
@@ -58,11 +58,13 @@
             color: #ccc;
             font-size: $planning-btn-height;
             height: $planning-btn-height;
+            cursor: pointer;
           }
           .promotion__planning--right-btn {
             color: #ccc;
             font-size: $planning-btn-height;
             height: $planning-btn-height;
+            cursor: pointer;
           }
           .promotion__planning--paging {
             display: inline-block;
