--- a/packages/web/src/sass/icon.scss
+++ b/packages/web/src/sass/icon.scss
@@ -84,3 +84,11 @@
   vertical-align: top;
   position: static;
 }
+.ico_remove {
+  background: url("../../assets/images/img_home_190702.png");
+  display: inline-block;
+  width: 7px;
+  height: 7px;
+  background-position: -150px -58px;
+  float: right;
+}
