--- a/src/public/sass/headerTop.scss
+++ b/src/public/sass/headerTop.scss
@@ -1,6 +1,7 @@
 $search-width: 670px;
 $search-height: 54px;
 $search-top10-height: 22px;
+$search-padding-left: 31px;
 
 .header-top {
   display: flex;
@@ -29,6 +30,12 @@ $search-top10-height: 22px;
         width: $search-width;
         height: $search-height;
         padding: 10px;
+        padding-left: $search-padding-left;
+        z-index: 1;
+        font-weight: 700;
+        font-size: 20px;
+        line-height: 22px;
+        color: #303030;
       }
 
       .search__icon {
@@ -42,7 +49,7 @@ $search-top10-height: 22px;
       overflow: hidden;
       position: absolute;
       top: 16px;
-      left: 31px;
+      left: $search-padding-left;
     }
     .search-top10__item {
       height: 22px;
