feat: rankKeyword를 컴포넌트로 빼내서 재활용

--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -42,6 +42,16 @@
         }
     }
 
+    .top10__item {
+        height: 30px;
+        color: $darkGray;
+        font-weight: 700;
+        .rank-keyword__numbering {
+            margin-right: 0px;
+            width: 30px;
+        }
+    }
+
     .search-blow {
         width: 670px;
         height: 300px;
@@ -277,5 +287,13 @@
                 }
             }
         }
+    }
+}
+
+.rank-keyword {
+    @extend %y-center-align;
+    .rank-keyword__numbering {
+        font-style: italic;
+        margin-right: 10px;
     }
 }
