--- a/src/components/Header/index.scss
+++ b/src/components/Header/index.scss
@@ -18,20 +18,39 @@ $button-padding: 20px;
   .search {
     display: flex;
     position: relative;
-    border: 1px solid gray;
+    padding: 16px 60px 14px 30px;
+    border: 1px solid #cecfd1;
+    border-radius: 10px;
+    width: 670px;
+    height: 54px;
 
     form {
         display: flex;
+        width: 100%;
+        height: 100%;
 
         .search__input {
-            width: 400px;
-            height: 60px;
-            padding: 10px;
+          width: 100%;
+          height: 100%;
+          font-weight: 700;
+          font-size: 20px;
         }
-
-        .search__icon {
-            font-size: 1.4rem;
-            padding: 10px;
+        
+        .search_btn{
+          position: absolute;
+          right: 0;
+          top: 0;
+          width: 52px;
+          height: 52px;
+          .search__icon {
+            background: url(//shop1.daumcdn.net/search/cdn/simage/shopping/v2/common/nav/ico_gnb_shw.png) no-repeat;
+            background-size: 130px 90px;
+            position: absolute;
+            left: 14px;
+            top: 15px;
+            width: 23px;
+            height: 23px;
+          }
         }
     }
 
@@ -47,39 +66,110 @@ $button-padding: 20px;
   }
 }
 
-.header-menu {
-  height: 60px;
-  display: flex;
-  border: 1px solid #cbcbcb;
-  max-width: 1270px;
-  margin: 0px auto;
-
-  .category__title {
-    height: 60px;
-    padding: 10px;
-
-    .fas {
-        margin-right: 8px;
-    }
-  }
-
-  .top-menu {
+.header-menu-wrapper {
+  position: relative;
+  border-top: 1px solid #efefef;
+  box-shadow: 0 1px rgb(0 0 0 / 16%);
+  
+  .header-menu {
+    height: 54px;
     display: flex;
-    align-items: center;
-    padding: 10px;
+    max-width: 1270px;
+    margin: 0px auto;
 
-    .top-menu__btn {
-      padding: 0 $button-padding;
-      line-height: 60px;
+    .category__title {
+      width: 118px;
+      height: 54px;
+      padding-left: 40px;
+      position: relative;
+
+      .category_icon {
+        position: absolute;
+        top: 13px;
+        left: 4px;
+        width: 28px;
+        height: 28px;
+        background: url(//shop1.daumcdn.net/search/cdn/simage/shopping/v2/common/nav/ico_gnb_shw.png) no-repeat;
+        background-size: 130px 90px;
+        background-position: 0 -30px;
+      }
     }
-  }
 
-  .private-menu {
-    margin-left: auto;
-    display: flex;
+    .top-menu {
+      display: flex;
+      align-items: center;
+      padding: 10px;
 
-    .private-menu__btn {
-        padding: $button-padding;
+      .top-menu__btn {
+        padding: 0 $button-padding;
+        font-weight: 700;
+        font-size: 16px;
+        cursor: pointer;
+      }
+      .top-menu__btn:hover {
+        color: #f65b3d;
+      }
+    }
+
+    .private-menu {
+      margin-left: auto;
+      display: flex;
+
+      .private-menu__btn {
+          a {
+            line-height: 59px;
+            box-sizing: content-box;
+            display: block;
+            position: relative;
+            height: 54px;
+            font-size: 16px;
+            letter-spacing: -.04em;
+            color: #000;
+            text-align: left;
+          }
+          .login {
+            width: 70px;
+            padding-left: 33px;
+
+            .login_icon {
+              background: url(//shop1.daumcdn.net/search/cdn/simage/shopping/v2/common/nav/ico_gnb_shw.png) no-repeat;
+              background-size: 130px 90px;
+              background-position: -30px -30px;
+              position: absolute;
+              top: 13px;
+              left: 0;
+              width: 28px;
+              height: 28px;
+            }
+          }
+
+          .recent_product {
+            width: 72px;
+            padding: 0 16px 0 34px;
+
+            .product_icon {
+              position: absolute;
+              top: 13px;
+              left: 0;
+              width: 28px;
+              height: 28px;
+              background: url(//shop1.daumcdn.net/search/cdn/simage/shopping/v2/common/nav/ico_gnb_shw.png) no-repeat;
+              background-size: 130px 90px;
+              background-position: -60px -30px;
+            }
+
+            .arrow {
+              background: url(//shop1.daumcdn.net/search/cdn/simage/shopping/v2/common/nav/ico_gnb_shw.png) no-repeat;
+              background-size: 130px 90px;
+              position: absolute;
+              right: 6px;
+              top: 26px;
+              width: 8px;
+              height: 5px;
+              background-position: -60px -60px;
+            }
+          }
+      }
     }
   }
 }
@@ -87,7 +177,7 @@ $button-padding: 20px;
 
 .gubun-bar {
   width: 1px;
-  height: 60px;
-  background: #cbcbcb;
-  margin: 0px 20px;
+  height: 18px;
+  background: #e3e3e3;
+  margin: 18px 0 0;
 }
