feat : 최근 본 상품 갯수 UI 동적렌더링

--- a/client/src/components/header/recently-viewed-thing/index.scss
+++ b/client/src/components/header/recently-viewed-thing/index.scss
@@ -50,6 +50,11 @@
     }
   }
 
+  .modal-things-length {
+    color: var(--color-orange);
+    text-decoration: underline;
+  }
+
   .modal-description {
     display: flex;
     justify-content: space-between;
