--- a/ethan.sglee/shoppingHow/views/index.html
+++ b/ethan.sglee/shoppingHow/views/index.html
@@ -196,11 +196,33 @@
 
     </div>
     <div class="recommendation">
+      <p>이 상품 어때요?</p>
       <ul class="picked-items">
-        <li class="picked-items__item"></li>
-        <li class="picked-items__item"></li>
-        <li class="picked-items__item"></li>
-        <li class="picked-items__item"></li>
+        <li class="picked-items__item">
+          <div class="picked-items__thumb">
+            <img src="//shop1.daumcdn.net/shophow/c/image/content/set/ad8255/20211014114401830_24251" alt="">
+          </div>
+          <div class="picekd-items__detail">
+            <div class="picked-items__title">
+              <strong>제목</strong>
+            </div>
+            <div class="picked-items__link">
+              <p>상품보기></p>
+            </div>
+          </div>
+        </li>
+        <li class="picked-items__item">
+          <p class="picked-items__empty-text">최근 본 상품이 없습니다</p>
+        </li>
+        <li class="picked-items__item">
+          <p class="picked-items__empty-text">최근 본 상품이 없습니다</p>
+        </li>
+        <li class="picked-items__item">
+          <p class="picked-items__empty-text">최근 본 상품이 없습니다</p>
+        </li>
+        <li class="picked-items__item">
+          <p class="picked-items__empty-text">최근 본 상품이 없습니다</p>
+        </li>
       </ul>
       <ul class="recommendation-items">
         <li class="recommendation-items__item"></li>
