--- a/ethan.sglee/shoppingHow/views/index.html
+++ b/ethan.sglee/shoppingHow/views/index.html
@@ -198,7 +198,7 @@
     <div class="recommendation">
       <p>이 상품 어때요?</p>
       <ul class="picked-items">
-        <li class="picked-items__item">
+        <li class="picked-items__item exist">
           <div class="picked-items__thumb">
             <img src="//shop1.daumcdn.net/shophow/c/image/content/set/ad8255/20211014114401830_24251" alt="">
           </div>
@@ -225,14 +225,6 @@
         </li>
       </ul>
       <ul class="recommendation-items">
-        <li class="recommendation-items__item"></li>
-        <li class="recommendation-items__item"></li>
-        <li class="recommendation-items__item"></li>
-        <li class="recommendation-items__item"></li>
-        <li class="recommendation-items__item"></li>
-        <li class="recommendation-items__item"></li>
-        <li class="recommendation-items__item"></li>
-        <li class="recommendation-items__item"></li>
       </ul>
     </div>
 
